--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,18 @@
 	<header>
-		<%= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+		<%= image_tag("logo.png", :alt => "Project I", :class => "round") %>
 		<nav class="round">
 			<ul>
 				<li><%= link_to "Home", root_path %></li>
-				<li><%= link_to "Sign In", "#" %></li>
-				<li><%= link_to "Secret", secret_path %></li>
+				
+				<% if not current_user %> 
+					<li><%= link_to "Sign up", signup_path %></li> or
+  					<li><%= link_to "Log in", login_path %></li>
+				<% else %>
+  					<li><%= link_to "Log out", logout_path %></li>
+  					<li><%= link_to "Secret", secret_path %></li>
+  					<li><%= current_user.email %></li>
+				<% end %>
 			</ul>
 		</nav>
+
 	</header>
